# API_FastAPI

./: main.py  pyproject.toml
migrations/: env.py
migrations/versions/: ae9de8b2a5ed_create_users_table.py
semana_da_fisica/: app.py  database.py  schemas.py  security.py
semana_da_fisica/routers/: auth.py  users.py
test/: conftest.py  test_app.py  test_db.py  test_security.py  test_users.py
